# rust-finally-block

./: CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs
